# Ausbildungsnachweise_check

./: Cargo.toml  configuration_sample.json
src/: main.rs
