[package]
name = "ausbildungsnachweise_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
octocrab = "0.29.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
chrono = "0.4.26"
dialoguer = "0.10.4"
thiserror = "1.0.44"
directories = "5.0.1"